# discovering-turbomodules

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  my-turbo-utils.podspec  package.json  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/myturboutils/: GreetingManager.kt  MyTurboUtilsModule.java  MyTurboUtilsModule.kt  MyTurboUtilsPackage.java  MyTurboUtilsPackage.kt  NativeProxy.java
cpp/: Logging.h  PlatformAdapter.h  TurboUtilsModule.cpp  TurboUtilsModule.h  empty.cpp
example/: app.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/myturboutils/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/myturboutils/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/MyTurboUtilsExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/MyTurboUtilsExample.xcodeproj/: project.pbxproj
example/ios/MyTurboUtilsExample.xcodeproj/xcshareddata/xcschemes/: MyTurboUtilsExample.xcscheme
example/ios/MyTurboUtilsExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: GreetingManager.swift  IosTurboUtilsAdapter.h  MyTurboUtils.h  MyTurboUtils.m  MyTurboUtils.mm
ios/MyTurboUtils.xcodeproj/: project.pbxproj
src/: index.tsx
